force-app/main/default/objects/BMCServiceDesk__SLA_Milestones__c/BMCServiceDesk__SLA_Milestones__c.object-meta.xml
<CustomObject>
    <description>SLA milestones</description>
    <label>SLA Milestone</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MilestoneID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>