force-app/main/default/objects/BMCServiceDesk__SLA_Milestones__c/fields/BMCServiceDesk__Days__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Days__c</fullName>
    <label>Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>