force-app/main/default/objects/BMCServiceDesk__SLA_Milestones__c/fields/BMCServiceDesk__FKService_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKService_Target__c</fullName>
    <label>Service Target</label>
    <referenceTo>BMCServiceDesk__Service_Target__c</referenceTo>
    <relationshipLabel>SLA Milestones</relationshipLabel>
    <relationshipName>SLA_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>