force-app/main/default/objects/BMCServiceDesk__SLA_Milestones__c/fields/BMCServiceDesk__Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Type__c</fullName>
    <formula>IF( ISPICKVAL(BMCServiceDesk__Condition__c, &apos;Service Target is Met&apos;), &apos;MET&apos;, 
    IF( ISPICKVAL(BMCServiceDesk__Condition__c,&apos;Service Target is Missed&apos;), &apos;MISS&apos;, 
        IF( ISPICKVAL(BMCServiceDesk__Condition__c,&apos;Service Target Warning Occurs&apos;), &apos;WARNING&apos;,
            IF( ISPICKVAL(BMCServiceDesk__Condition__c,&apos;Service Target is Canceled&apos;), &apos;CANCEL&apos;, &apos;TIME&apos;)
        )
    ) 
)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>