force-app/main/default/objects/BMCServiceDesk__SLA_Milestones__c/fields/BMCServiceDesk__Value__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Value__c</fullName>
    <description>Value is the milestone condition value
It can be either in:
Percentage or
Minutes</description>
    <label>Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>