force-app/main/default/objects/BMCServiceDesk__SLA_Milestones__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Condition__c</columns>
    <columns>BMCServiceDesk__Type__c</columns>
    <columns>BMCServiceDesk__Value__c</columns>
    <columns>BMCServiceDesk__FKService_Target__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>